removed contact page, going to add contact info to the info page for more modular navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- main stylesheet -->
     <link ref="stylesheet" href="/src/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Condemned</title>
   </head>
   <body>
     <div id="root"></div>
