--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/Untitled.svg" />
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- main stylesheet -->
     <link ref="stylesheet" href="/src/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Condemned</title>
+    <title>Condemned Compound</title>
   </head>
   <body>
     <div id="root"></div>
